
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;
 int put_byte (char*,unsigned short) ;

void put_word (char *ptr, unsigned short data) {
       put_byte (ptr, data);
       put_byte (ptr + 1, data >> 8);
}
